--- a/index.html
+++ b/index.html
@@ -6,7 +6,94 @@
   </head>
   <body>
     <div class='item-slider' id='item-slider'>
-      ul*4
+      <ul>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/1.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/2.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/3.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/4.png'>
+          </a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/5.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/6.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/7.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/8.png'>
+          </a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/1.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/2.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/3.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/4.png'>
+          </a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/5.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/6.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/7.png'>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='' src='img/8.png'>
+          </a>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
