--- a/index.html
+++ b/index.html
@@ -9,88 +9,104 @@
       <ul>
         <li>
           <a href='#'>
-            <img alt='' src='img/1.png'>
+            <img alt='img1' src='img/1.png'>
+            <h4>Kwiatki</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/2.png'>
+            <img alt='img2' src='img/2.png'>
+            <h4>Stokrotki</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/3.png'>
+            <img alt='img3' src='img/3.png'>
+            <h4>Tulipan</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/4.png'>
-          </a>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <a href='#'>
-            <img alt='' src='img/5.png'>
-          </a>
-        </li>
-        <li>
-          <a href='#'>
-            <img alt='' src='img/6.png'>
-          </a>
-        </li>
-        <li>
-          <a href='#'>
-            <img alt='' src='img/7.png'>
-          </a>
-        </li>
-        <li>
-          <a href='#'>
-            <img alt='' src='img/8.png'>
+            <img alt='img4' src='img/4.png'>
+            <h4>Niezapominajki</h4>
           </a>
         </li>
       </ul>
       <ul>
         <li>
           <a href='#'>
-            <img alt='' src='img/1.png'>
+            <img alt='img5' src='img/5.png'>
+            <h4>Jeże</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/2.png'>
+            <img alt='img6' src='img/6.png'>
+            <h4>Kotek</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/3.png'>
+            <img alt='img7' src='img/7.png'>
+            <h4>Gwiazda Śmierci</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/4.png'>
+            <img alt='img8' src='img/8.png'>
+            <h4>Papuga</h4>
           </a>
         </li>
       </ul>
       <ul>
         <li>
           <a href='#'>
-            <img alt='' src='img/5.png'>
+            <img alt='img1' src='img/1.png'>
+            <h4>Kwiatki</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/6.png'>
+            <img alt='img2' src='img/2.png'>
+            <h4>Stokrotki</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/7.png'>
+            <img alt='img3' src='img/3.png'>
+            <h4>Tulipan</h4>
           </a>
         </li>
         <li>
           <a href='#'>
-            <img alt='' src='img/8.png'>
+            <img alt='img4' src='img/4.png'>
+            <h4>Niezapominajki</h4>
+          </a>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a href='#'>
+            <img alt='img5' src='img/5.png'>
+            <h4>Jeże</h4>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='img6' src='img/6.png'>
+            <h4>Kotek</h4>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='img7' src='img/7.png'>
+            <h4>Gwiazda Śmierci</h4>
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            <img alt='img8' src='img/8.png'>
+            <h4>Papuga</h4>
           </a>
         </li>
       </ul>
