--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
           </a>
         </li>
       </ul>
+      <nav>
+        <a href='#'>Kwiaty</a>
+        <a href='#'>Zwierzęta</a>
+        <a href='#'>Foki</a>
+        <a href='#'>Krokodyle</a>
+      </nav>
     </div>
   </body>
 </html>
