links css na djs with index

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html class='no-js'>
   <head>
     <title>Nina Peplińska</title>
     <meta charset='UTF-8'>
+    <link href='styles.css' rel='stylesheet'>
+    <script src='libraries/modernizr.js'></script>
   </head>
   <body>
     <div class='item-slider' id='item-slider'>
@@ -118,4 +120,5 @@
       </nav>
     </div>
   </body>
+  <script src='script.js'></script>
 </html>
