--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <title>Nina Peplińska</title>
     <meta charset='UTF-8'>
     <link href='styles.css' rel='stylesheet'>
-    <!-- %script{src: "libraries/modernizr.js"} -->
+    <script src='libraries/modernizr.js'></script>
   </head>
   <body>
+      <div class="container"> <header class="clearfix">
+    <h1>Magazyn Niny Peplińskiej <span>Ręcznie robione błyskotki</span></h1></header>
+  
     <div class='mi-slider' id='mi-slider'>
       <ul>
         <li>
@@ -118,6 +121,7 @@
         <a href='#'>Foki</a>
         <a href='#'>Krokodyle</a>
       </nav>
+    </div>
     </div>
   </body>
   <script src='libraries/jquery.js'></script>
